# LedControl_old

./: .gitignore  LICENSE
Casing/: LedControl.scad
Display/: Bitmap.cpp  Bitmap.h
Effects/: Autumn.h  Color.h  Effect.h  MovingLight.h  Plasma.h  Rainbow.h  Spring.h  Summer.h  Winter.h  autumn.palette  hsv2rgb.h  hue.palette  noise.h  spring.palette  summer.palette  types.h  winter.palette
Emulator/: Bitmap.cpp  Bitmap.h  CMakeLists.txt  Display.cpp  Display.h  LedStrip.cpp  LedStrip.h  Slider.cpp  Slider.h  Types.h  Util.h  Widget.cpp  Widget.h  main.cpp  util.h
Emulator/cmake/: FindGLFW.cmake
Emulator/glad/: glad.c  glad.h
Fonts/: Font.cpp  Font.h  tahoma_8pt.cpp
Generator/: CMakeLists.txt  hsv2rgb.cpp  hsv2rgb.h  main.cpp  xcode
Hardware1/Board/: LedControl.pro  LedControl.sch
Hardware1/Software/: CMakeLists.txt  main.c  util.h
Hardware2/Board/: LedControl-cache.lib  LedControl.dcm  LedControl.kicad_pcb  LedControl.lib  LedControl.pro  LedControl.sch  Power.sch  fp-lib-table  sym-lib-table
Hardware2/Board/LedControl.pretty/: ALPS_BOURNS_EC12.kicad_mod  CSTCE_16.kicad_mod  Connector_Flat_24_Pitch0.50mm.kicad_mod  Divider_21mm.kicad_mod  Divider_22mm.kicad_mod  Jumper.kicad_mod  Jumper3.kicad_mod  LED_Strip.kicad_mod  LED_Strip_Start.kicad_mod  MicroSD.kicad_mod  Micro_SD.kicad_mod  Micro_USB.kicad_mod  Oscillator_5x3.2mm.kicad_mod  Pad.kicad_mod  Slot_15x2mm.kicad_mod  TPS82130.kicad_mod  WAGO_2059-302.kicad_mod  WAGO_2059-303.kicad_mod  WAGO_2060-452.kicad_mod
Hardware2/Casing/: LedControl.scad
Hardware2/Software/: CMakeLists.txt  DmaChannel.h  Flash.h  Peripheral.h  Pin.h  main.cpp  util.h
Hardware2/Stm32/: STM32L433CCU.ioc
